# FluidSiren

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
overlay/: Cargo.toml
overlay/src/: main.rs
packaging/: PKGBUILD  dev.altic.FluidSiren.desktop
packaging/kwin/fluidsiren-overlay-ontop/: metadata.json
packaging/kwin/fluidsiren-overlay-ontop/contents/code/: main.js
scripts/: fluidsiren-launch.sh  install.sh  setup-ollama.sh
src/: asr.rs  audio.rs  config.rs  engine.rs  enhance.rs  hotkey.rs  inject.rs  main.rs  ollama.rs  overlay.rs  parakeet.rs  scope.rs
src/ui/: mod.rs
ui/: main.slint  overlay.slint  settings.slint
